--- a/src/selectize/choices.tpl.html
+++ b/src/selectize/choices.tpl.html
@@ -1,8 +1,11 @@
 <div class="ui-select-choices">
   <div class="ui-select-choices-content selectize-dropdown-content">
     <div class="ui-select-choices-group optgroup">
-      <div ng-show="$select.isGrouped" class="ui-select-choices-group-label optgroup-header" ng-bind="$group.name"></div>
-      <div role="option" class="ui-select-choices-row" ng-class="{active: $select.isActive(this), disabled: $select.isDisabled(this)}">
+      <div ng-show="$select.isGrouped" class="ui-select-choices-group-label optgroup-header" ng-bind="$group.name">
+      </div>
+      <div role="option" class="ui-select-choices-row"
+        ng-class="{active: $select.isActive(this), disabled: $select.isDisabled(this)}"
+        aria-selected="{{ $select.isActive(this) }}">
         <div class="option ui-select-choices-row-inner" data-selectable></div>
       </div>
     </div>
