--- a/src/bootstrap/select.tpl.html
+++ b/src/bootstrap/select.tpl.html
@@ -1,9 +1,9 @@
 <div class="ui-select-container ui-select-bootstrap dropdown" ng-class="{open: $select.open}">
   <div class="ui-select-match"></div>
   <span ng-show="$select.open && $select.refreshing  && $select.spinnerEnabled" class="ui-select-refreshing {{$select.spinnerClass}}"></span>
-  <input type="search" autocomplete="off" tabindex="0"
+  <input type="search" autocomplete="off" tabindex="-1"
          role="combobox"
-         aria-expanded="{{$select.open}}"
+         aria-expanded="true"
          aria-label="{{ $select.baseTitle }}"
          aria-owns="ui-select-choices-{{ $select.generatedId }}"
          class="form-control ui-select-search"
