--- a/src/bootstrap/choices.tpl.html
+++ b/src/bootstrap/choices.tpl.html
@@ -1,9 +1,14 @@
 <ul class="ui-select-choices ui-select-choices-content">
-  <li class="ui-select-choices-group" id="ui-select-choices-{{ $select.generatedId }}" >
+  <li class="ui-select-choices-group" id="ui-select-choices-{{ $select.generatedId }}" role='listbox'>
     <div class="divider" ng-show="$select.isGrouped && $index > 0"></div>
     <div ng-show="$select.isGrouped" class="ui-select-choices-group-label dropdown-header" ng-bind="$group.name"></div>
-    <div ng-attr-id="ui-select-choices-row-{{ $select.generatedId }}-{{$index}}" class="ui-select-choices-row"
-    ng-class="{active: $select.isActive(this), disabled: $select.isDisabled(this)}" role="option">
+    <div
+      ng-attr-id="ui-select-choices-row-{{ $select.generatedId }}-{{$index}}"
+      class="ui-select-choices-row"
+      ng-class="{active: $select.isActive(this), disabled: $select.isDisabled(this)}"
+      role="option"
+      ng-attr-aria-selected="{{ $select.isActive(this) }}"
+      >
       <span class="ui-select-choices-row-inner"></span>
     </div>
   </li>
