--- a/src/bootstrap/choices.tpl.html
+++ b/src/bootstrap/choices.tpl.html
@@ -1,5 +1,10 @@
-<ul class="ui-select-choices ui-select-choices-content">
+<ul class="ui-select-choices ui-select-choices-content" tabindex="0">
   <li class="ui-select-choices-group" id="ui-select-choices-{{ $select.generatedId }}" role='listbox'>
+    <p class="ui-select-visually-hidden" role="alert" aria-live="assertive" aria-atomic="true">
+      Now you have {{ $select.items.length }} items to choose in the list.
+      The selected item is <span ng-bind="$select.activeItemName"></span>
+    </p>
+
     <div class="divider" ng-show="$select.isGrouped && $index > 0"></div>
     <div ng-show="$select.isGrouped" class="ui-select-choices-group-label dropdown-header" ng-bind="$group.name"></div>
     <div
@@ -7,8 +12,7 @@
       class="ui-select-choices-row"
       ng-class="{active: $select.isActive(this), disabled: $select.isDisabled(this)}"
       role="option"
-      ng-attr-aria-selected="{{ $select.isActive(this) }}"
-      >
+      ng-attr-aria-selected="{{ $select.isActive(this) }}" >
       <span class="ui-select-choices-row-inner"></span>
     </div>
   </li>
