fix multiple reads

--- a/src/bootstrap/select.tpl.html
+++ b/src/bootstrap/select.tpl.html
@@ -3,7 +3,7 @@
   <span ng-show="$select.open && $select.refreshing  && $select.spinnerEnabled"
     class="ui-select-refreshing {{$select.spinnerClass}}"></span>
 
-  <div role='combobox' aria-haspopup="listbox" aria-live="polite" aria-expanded="false"
+  <div role='combobox' aria-haspopup="listbox" aria-expanded="false"
     aria-owns="ui-select-choices-{{ $select.generatedId }}">
 
     <p class="ui-select-dropdown-notification ui-select-visually-hidden" aria-live="assertive"></p>
