--- a/src/bootstrap/no-choice.tpl.html
+++ b/src/bootstrap/no-choice.tpl.html
@@ -1,5 +1,5 @@
 <ul class="ui-select-no-choice dropdown-menu"
-    ng-show="$select.items.length == 0">
+    ng-show="$select.items.length == 0" id="ui-select-no-choice-{{ $select.generatedId }}" aria-live="assertive">
     <li ng-transclude>
 
     </li>
