--- a/src/bootstrap/select.tpl.html
+++ b/src/bootstrap/select.tpl.html
@@ -9,7 +9,7 @@
     <p class="ui-select-dropdown-notification ui-select-visually-hidden" aria-live="assertive"></p>
 
     <input type="search" autocomplete="off" tabindex="-1" placeholder="{{$select.placeholder}}"
-      class="form-control ui-select-search" aria-label="{{ $select.baseTitle }}" aria-live="polite"
+      class="form-control ui-select-search" aria-label="{{ $select.baseTitle }}"
       ng-class="{ 'ui-select-search-hidden' : !$select.searchEnabled }" ng-model="$select.search"
       ng-show="$select.open">
   </div>
