--- a/src/bootstrap/match-multiple.tpl.html
+++ b/src/bootstrap/match-multiple.tpl.html
@@ -1,4 +1,4 @@
-<span class="ui-select-match" id="ui-select-match-text-{{ $select.generatedId }}" aria-live="assertive">
+<span class="ui-select-match" id="ui-select-match-text-{{ $select.generatedId }}">
   <span ng-repeat="$item in $select.selected track by $index">
     <span
       class="ui-select-match-item btn btn-default btn-xs"
