add fix for voiceover renew notification

--- a/src/bootstrap/select.tpl.html
+++ b/src/bootstrap/select.tpl.html
@@ -9,8 +9,7 @@
     <div
       class="ui-select-dropdown-notification ui-select-visually-hidden"
       aria-live="assertive"
-      role="region"
-      autofocus>
+      role="region">
     </div>
 
     <input type="search" autocomplete="off" tabindex="-1" placeholder="{{$select.placeholder}}"
